# ecml2026

./: .flake8  .gitignore  README.md  pre-commit-config.yaml  pyproject.toml
data/: data_processor_PV_production_Elia.ipynb
data/processed/Irradiance_2021_2025_Elia_Consumption_Forecast/: processed_irradiance_forecast_production_Luxembourg_2021_2025.parquet
data/processed/non_flexible_load_SRD_2022/: avg_consumption.csv
results_ECML2026/CA/EVs_1/EV_DRL/0/: agent_configs.h5  simulation_parameters.h5
results_ECML2026/CA/EVs_1/EV_DRL/1/: agent_configs.h5  simulation_parameters.h5
results_ECML2026/CA/EVs_1/EV_DRL/2/: agent_configs.h5  simulation_parameters.h5
results_ECML2026/CA/EVs_1/EV_DRL/3/: agent_configs.h5  simulation_parameters.h5
results_ECML2026/CA/EVs_1/EV_DRL/4/: agent_configs.h5  simulation_parameters.h5
results_ECML2026/CA/EVs_1/EV_DRL/5/: agent_configs.h5  simulation_parameters.h5
results_ECML2026/CA/EVs_1/EV_DRL/6/: agent_configs.h5  simulation_parameters.h5
results_ECML2026/CA/EVs_1/EV_DRL/7/: agent_configs.h5  simulation_parameters.h5
results_ECML2026/CA/EVs_1/EV_DRL/8/: agent_configs.h5  (+1 more)
simulation/: results_analysis.ipynb  simulation_ECML2026.py  simulation_ECML2026_tutorial.ipynb  simulation_Trail
src/DRL/: DDPG_Agent_multistep.py  DQN_Agent.py  __init__.py
src/agents/: agent.py  ev_agent.py
src/physics/: ev_physics.py  flexibility_physics.py
src/simulation/: simulation.py
src/strategies/: __init__.py  baseline.py  drl.py  mab_ftpl_R.py  mab_ts.py  milp.py  milp_forecast_price.py  milp_optimization.py  prior_opt.py  strategy.py
src/utils/: export_data.py  find_root.py  generate_price.py  import_data.py  multi_plotter.py  plot_analysis.py  plot_results.py  strategy_comparison.py  strategy_config_manager.py
(+22 files in other folders)
