[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ECML2026"
version = "0.1.0"
description = "Power Systems Analysis Tools"
requires-python = ">=3.9,<3.10"
dependencies = [
    # Core numeric stack
    "numpy==2.0.2",
    "pandas==2.3.3",
    "scipy==1.13.1",

    # Plotting
    "matplotlib==3.9.4",
    "seaborn==0.13.2",

    # ML (you have scikit-learn in your list)
    "scikit-learn==1.6.1",

    # Progress + formatting
    "tqdm==4.67.3",
    "rich==14.3.3",
    "tabulate==0.9.0",

    # Notebooks (these pull in almost all the jupyter/anyio/argon2/etc.)
    "ipykernel==6.30.1",
    "jupyter==1.1.1",
    "notebook==7.5.4",
    "jupyterlab==4.5.5",
    "ipywidgets==8.1.8",

    # IO formats you listed
    "pyarrow==21.0.0",
    "fastparquet==2024.11.0",

    # Your solver stack (you listed these)
    "pyomo==6.9.5",
    "gurobipy==12.0.3",

    # HDF5 (you listed)
    "h5py==3.14.0",

    # Parser you listed
    "lark==1.3.1",
]

[project.optional-dependencies]
test = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
addopts = ["--verbose", "--color=yes"]

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.hatch.build]
packages = ["src"]

[tool.hatch.build.sources]
"src" = ""

[tool.black]
line-length = 100
target-version = ["py39"]

[tool.isort]
profile = "black"
line_length = 100

[tool.pylint.messages_control]
disable = [
  "missing-docstring",
  "invalid-name",
  "too-many-arguments",
  "too-many-instance-attributes",
  "too-few-public-methods",
  "fixme",
  "no-else-return",
]

[tool.pylint.format]
max-line-length = 100